# slurp

./: .gitignore  README.md  pyproject.toml  setup.py
notebook/: demo.py  demo_scipy.ipynb  demo_torch.ipynb  spline_test.py  train_simple_spline.py
notebook/layouts/: train_simple_spline.grid.json
slurp/: __init__.py
slurp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
slurp/src/: gnam.py  utils.py
slurp/src/module/: core.py  factor.py  linear.py  spline.py
slurp/src/scipy/: _f.py  _gnam.py
