

[project]
name = "slurp"
version = "0.2.0"
description = "A package to easily handle spline neuralnetwork"
authors = [
  { name="Andrea Maioli", email="maioliandrea0@gmail.com" },
]
requires-python = ">=3.11" 

dependencies = [
    "polars",
    "autograd",
    "scipy"
]


[project.optional-dependencies]
torch = [
    "torch>=2.0.0"
]





[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
